Implementar cambios en la pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-             PyAr - Python Mexico
+             Python Mexico
         </title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
@@ -48,7 +48,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/" class="navbar-brand">PyAr</a>
+                    <a href="/" class="navbar-brand">Python Mexico</a>
                     <div class="loginreg">
                       
                       <a href="/accounts/login/?next=/">Ingresá</a> o <a href="/accounts/signup/?next=/">Registrate</a>
@@ -69,19 +69,13 @@
                             <a href="/lista/"><span class="navbar_lista_de_correo"></span>Lista</a>
                         </li>
                         <li>
-                            <a href="/wiki/"><span class="wiki"></span>Wiki</a>
-                        </li>
-                        <li>
                             <a href="/noticias/"><span class="news"></span>Noticias</a>
                         </li>
                         <li>
-                            <a href="/irc/"><span class="irc"></span>Chat</a>
+                            <a href="irc://irc.freenode.net/pythonmx"><span class="irc"></span>Chat</a>
                         </li>
                         <li>
                             <a href="/eventos/"><span class="eventos"></span>Eventos</a>
-                        </li>
-                        <li>
-                            <a href="http://planeta.python.org.ar/" target="_blank"><span class="pyar"></span>Planeta</a>
                         </li>
                         <li>
                             <a href="/trabajo/"><span class="jobs"></span>Trabajos</a>
@@ -124,18 +118,18 @@
         <div class="row index-content">
             <article class="col-sm-4">
                 <div class="img aprendiendo_python"></div>
-                <h3 class="text-center"><a href="/aprendiendo-python/">Aprendiendo Python</a></h3>
-                <p class="text-center">Recopilación de recursos que los miembros de PyAr consideramos útil para quienes que se inician en este lenguaje.</p>
+                <h3 class="text-center">Aprendiendo Python</h3>
+                <p class="text-center">Recopilación de recursos que los miembros de PythonMX consideramos útil para quienes que se inician en este lenguaje.</p>
             </article>
             <article class="col-sm-4">
                 <div class="img lista_correo"></div>
-                <h3 class="text-center"><a href="/lista/">Lista de correo</a></h3>
+                <h3 class="text-center"><a href="https://mail.python.org/mailman/listinfo/python-mx">Lista de correo</a></h3>
                 <p class="text-center">Instrucciones para suscribirte a nuestra lista, nuestro principal canal de comunicación.</p>
             </article>
 
             <article class="col-sm-4">
                 <div class="img proyectos_comunidad"></div>
-                <h3 class="text-center"><a href="/trabajo/">Bolsa de Trabajo</a></h3>
+                <h3 class="text-center">Bolsa de Trabajo</h3>
                 <p class="text-center">Ofrece o busca empleos relacionados con Python.</p>
             </article>
 
@@ -143,7 +137,7 @@
             <div class="row">
             <article class="col-sm-4">
                 <div class="img quienes_usan_python"></div>
-                <h3 class="text-center"><a href="/empresas/">Quiénes usan Python</a></h3>
+                <h3 class="text-center">Quiénes usan Python</h3>
                 <p class="text-center">Información sobre organizaciones que utilizan Python en Mexico.</p>
             </article>
 
@@ -155,7 +149,7 @@
 
             <article class="col-sm-4">
                 <div class="img adopta_un_newbie"></div>
-                <h3 class="text-center"><a href="/wiki/Proyectos">Proyectos de la comunidad</a></h3>
+                <h3 class="text-center">Proyectos de la comunidad</h3>
                 <p class="text-center">Los proyectos que desarrollamos como grupo o en los que participan nuestros miembros.</p>
             </article>
 
@@ -271,7 +265,7 @@
               <h3 class="list-group-item-heading">Suscribite a la lista</h3>
             </header>
             <article class="list-group-item">
-              <form id="newsletter-form" class="inline-form" action="http://listas.python.org.ar/mailman/subscribe/pyar" method="POST">
+              <form id="newsletter-form" class="inline-form" action="https://mail.python.org/mailman/listinfo/python-mx" method="POST">
                 <div class="form-group">
                   <input class="form-control" name="email" placeholder="Email">
                   <input type="hidden" name="language" value="es">
@@ -321,13 +315,13 @@
     <div class="row">
         <div class="col-xs-6">
             <ul class="list-inline left">
-                <li class="pyar"><a href="/">Comunidad Python Mexico</a><br><a href="mailto:admin@python.org.ar">admin@python.org.ar</a></li>
+                <li class="pyar"><a href="/">Comunidad Python Mexico</a><br><a href="mailto:python-mx@python.org">python-mx@python.org</a></li>
             </ul>
         </div>
         <div class="col-xs-6">
             <ul class="list-inline right">
-                <li class="usla"><a href="http://drupal.usla.org.ar/">Sitio hosteado por USLA<br>Usuarios de Software libre de Mexico</a></li>
-                <li class="python"><a href="https://github.com/PyAr/pyarweb">Python<br>Powered</a></li>
+                <li class="usla"><a href="http://github.org/">Sitio hosteado por Github</li>
+                <li class="python"><a href="https://github.com/PythonMexico/pythonmexico.github.io">Python<br>Powered</a></li>
             </ul>
         </div>
     </div>
