--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
             <article class="col-sm-4">
                 <div class="img proyectos_comunidad"></div>
-                <h3 class="text-center">Bolsa de Trabajo</h3>
-                <p class="text-center">Ofrece o busca empleos relacionados con Python.</p>
+                <h3 class="text-center">Chat de PythonMX</h3>
+                <p class="text-center">Unete a nuestro chat en <a href="irc://freenode.net/pythonmx">Freenode</a></p>
             </article>
 
             </div>
@@ -143,8 +143,8 @@
 
             <article class="col-sm-4">
                 <div class="img wiki"></div>
-                <h3 class="text-center"><a href="/wiki/">Nuestra wiki</a></h3>
-                <p class="text-center">El espacio de edición colaborativa de nuestra web</p>
+                <h3 class="text-center"><a href="https://www.facebook.com/groups/pythonmx/">Grupo en Facebook</a></h3>
+                <p class="text-center">El espacio de edición colaborativa</p>
             </article>
 
             <article class="col-sm-4">
@@ -270,7 +270,7 @@
                   <input class="form-control" name="email" placeholder="Email">
                   <input type="hidden" name="language" value="es">
                 </div>
-                <input class="btn btn-primary" type="submit" value="Inscribirme a Pyar!">
+                <input class="btn btn-primary" type="submit" value="Inscribirme a PythonMX!">
               </form>
             </article>
           </section>
