Fixed the css url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="/static/bootstrap/3.1.1/js/bootstrap-growl.min.js"></script>
 
 		<!-- Materialize CSS -->
-        <script src="/static/css/materialize.min.css"></script>
+        <link rel="stylesheet" href="/static/css/materialize.min.css" />
         <script src="/static/js/materialize.min.js"></script>
 
         <script src="/static/js/web.js"></script>
