--- a/index.html
+++ b/index.html
@@ -45,49 +45,34 @@
 
 
 <header id="header" class="navbar navbar-static-top" role="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-3 col-lg-3">
-                <div class="navbar-header">
-                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#header-navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="/" class="navbar-brand">Python Mexico</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-9 col-lg-9">
-                <nav id="header-navbar-collapse" class="collapse navbar-collapse" role="navigation">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="/"><span class="inicio"></span>Inicio</a>
-                        </li>
-                        <li>
-                            <a href="/nosotros/"><span class="quienes_somos"></span>Nosotros</a>
-                        </li>
-                        <li>
-                            <a href="/lista/"><span class="navbar_lista_de_correo"></span>Lista</a>
-                        </li>
-                        <li>
-                            <a href="/noticias/"><span class="news"></span>Noticias</a>
-                        </li>
-                        <li>
-                            <a href="irc://irc.freenode.net/pythonmx"><span class="irc"></span>Chat</a>
-                        </li>
-                        <li>
-                            <a href="/eventos/"><span class="eventos"></span>Eventos</a>
-                        </li>
-                        <li>
-                            <a href="/trabajo/"><span class="jobs"></span>Trabajos</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
+	<div class="nav-wrapper">
+		<nav>
+			<a href="/" class="brand-logo left">Python Mexico</a>
+			<ul id=nav-mobile" class="right hide-on-med-and-down">
+				<li>
+					<a href="/"><span class="inicio"></span>Inicio</a>
+				</li>
+				<li>
+					<a href="/nosotros/"><span class="quienes_somos"></span>Nosotros</a>
+				</li>
+				<li>
+					<a href="/lista/"><span class="navbar_lista_de_correo"></span>Lista</a>
+				</li>
+				<li>
+					<a href="/noticias/"><span class="news"></span>Noticias</a>
+				</li>
+				<li>
+					<a href="irc://irc.freenode.net/pythonmx"><span class="irc"></span>Chat</a>
+				</li>
+				<li>
+					<a href="/eventos/"><span class="eventos"></span>Eventos</a>
+				</li>
+				<li>
+					<a href="/trabajo/"><span class="jobs"></span>Trabajos</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 </header>
 
 
