--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 
 <header id="header" class="navbar navbar-static-top" role="banner">
-	<div class="nav-wrapper">
-		<nav>
+		<nav class="blue lighten-1">
+		  <div class="nav-wrapper ">
 			<a href="/" class="brand-logo left">Python Mexico</a>
 			<ul id=nav-mobile" class="right hide-on-med-and-down">
 				<li>
@@ -71,8 +71,8 @@
 					<a href="/trabajo/"><span class="jobs"></span>Trabajos</a>
 				</li>
 			</ul>
+		   </div>
 		</nav>
-	</div>
 </header>
 
 
@@ -106,18 +106,18 @@
         <div class="row index-content">
             <article class="col-sm-4">
                 <div class="img aprendiendo_python"></div>
-                <h3 class="text-center">Aprendiendo Python</h3>
+                <h4 class="text-center">Aprendiendo Python</h4>
                 <p class="text-center">Recopilación de recursos que los miembros de PythonMX consideramos útil para quienes que se inician en este lenguaje.</p>
             </article>
             <article class="col-sm-4">
                 <div class="img lista_correo"></div>
-                <h3 class="text-center"><a href="https://mail.python.org/mailman/listinfo/python-mx">Lista de correo</a></h3>
+                <h4 class="text-center"><a href="https://mail.python.org/mailman/listinfo/python-mx">Lista de correo</a></h4>
                 <p class="text-center">Instrucciones para suscribirte a nuestra lista, nuestro principal canal de comunicación.</p>
             </article>
 
             <article class="col-sm-4">
                 <div class="img proyectos_comunidad"></div>
-                <h3 class="text-center">Chat de PythonMX</h3>
+                <h4 class="text-center">Chat de PythonMX</h4>
                 <p class="text-center">Unete a nuestro chat en <a href="irc://freenode.net/pythonmx">Freenode</a></p>
             </article>
 
@@ -125,19 +125,19 @@
             <div class="row">
             <article class="col-sm-4">
                 <div class="img quienes_usan_python"></div>
-                <h3 class="text-center">Quiénes usan Python</h3>
+                <h4 class="text-center">Quiénes usan Python</h4>
                 <p class="text-center">Información sobre organizaciones que utilizan Python en Mexico.</p>
             </article>
 
             <article class="col-sm-4">
                 <div class="img wiki"></div>
-                <h3 class="text-center"><a href="https://www.facebook.com/groups/pythonmx/">Grupo en Facebook</a></h3>
+                <h4 class="text-center"><a href="https://www.facebook.com/groups/pythonmx/">Grupo en Facebook</a></h4>
                 <p class="text-center">El espacio de edición colaborativa</p>
             </article>
 
             <article class="col-sm-4">
                 <div class="img adopta_un_newbie"></div>
-                <h3 class="text-center">Proyectos de la comunidad</h3>
+                <h4 class="text-center">Proyectos de la comunidad</h4>
                 <p class="text-center">Los proyectos que desarrollamos como grupo o en los que participan nuestros miembros.</p>
             </article>
 
@@ -251,7 +251,7 @@
 
           <section class="list-group">
             <header class="list-group-item">
-              <h3 class="list-group-item-heading">Suscribite a la lista</h3>
+              <h4 class="list-group-item-heading">Suscribite a la lista</h4>
             </header>
             <article class="list-group-item">
               <form id="newsletter-form" class="inline-form" action="https://mail.python.org/mailman/listinfo/python-mx" method="POST">
@@ -267,7 +267,7 @@
           <!-- Próximos eventos -->
           <section class="list-group">
               <header class="list-group-item">
-                  <h3 class="list-group-item-heading">Próximos Eventos<div class="pull-right">
+                  <h4 class="list-group-item-heading">Próximos Eventos<div class="pull-right">
                       <a href="/eventos/rss" class="badge">
                       <i class="fa fa-rss"></i> RSS</a>
                     </div></h3>
