--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 		<!-- Materialize CSS -->
         <link rel="stylesheet" href="/static/css/materialize.min.css" />
+		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="/static/js/materialize.min.js"></script>
 
         <script src="/static/js/web.js"></script>
@@ -45,7 +46,7 @@
 
 
 <header id="header" class="navbar navbar-static-top" role="banner">
-		<nav class="blue lighten-1">
+		<nav class="indigo accent-4">
 		  <div class="nav-wrapper ">
 			<a href="/" class="brand-logo left">Python Mexico</a>
 			<ul id=nav-mobile" class="right hide-on-med-and-down">
@@ -259,7 +260,7 @@
                   <input class="form-control" name="email" placeholder="Email">
                   <input type="hidden" name="language" value="es">
                 </div>
-				<a class="waves-effect waves-light btn"><i class="material-icons left">done</i>Inscribirme a PythonMX!</a>
+				<a class="waves-effect waves-light btn"><i class="material-icons left">Done</i>Inscribirme a PythonMX!</a>
               </form>
             </article>
           </section>
