update styles on header and banner

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <header id="header" class="navbar navbar-static-top" role="banner">
 		<nav class="indigo accent-4">
 		  <div class="nav-wrapper ">
-			<a href="/" class="brand-logo left">Python Mexico</a>
+			<a href="/" id="logo" class="brand-logo left">Python Mexico</a>
 			<ul id=nav-mobile" class="right hide-on-med-and-down">
 				<li>
 					<a href="/"><span class="inicio"></span>Inicio</a>
@@ -94,7 +94,7 @@
 </div>
 
 
-<main id="main" class="container" role="main">
+<main id="main" role="main">
 
   
 
