add headico class to align material-icons

--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
     <section>
         <div class="row index-content">
             <article class="col s4">
-				<i class="large material-icons blue-text darken-4">input</i>
+				<i class="large material-icons blue-text headico">input</i>
                 <div class="img aprendiendo_python"></div>
                 <h4 class="text-center">Aprendiendo Python</h4>
                 <p class="text-center">Recopilación de recursos que los miembros de PythonMX consideramos útil para quienes que se inician en este lenguaje.</p>
             </article>
             <article class="col s4">
-				<i class="large material-icons blue-text darken-4">email</i>
-                <h4 class="text-center"><a href="https://mail.python.org/mailman/listinfo/python-mx">Lista de correo</a></h4>
+				<a href="https://mail.python.org/mailman/listinfo/python-mx"><i class="large material-icons blue-text headico">email</i>
+                <h4 class="text-center">Lista de correo</h4></a>
                 <p class="text-center">Instrucciones para suscribirte a nuestra lista, nuestro principal canal de comunicación.</p>
             </article>
 
             <article class="col s4">
-				<i class="large material-icons blue-text darken-4">chat_bubble</i>
+				<i class="large material-icons blue-text headico">chat_bubble</i>
                 <h4 class="text-center">Chat de PythonMX</h4>
                 <p class="text-center">Unete a nuestro chat en <a href="irc://freenode.net/pythonmx">Freenode</a></p>
             </article>
@@ -109,19 +109,19 @@
             </div>
             <div class="row">
             <article class="col s4">
-				<i class="large material-icons blue-text darken-4">grade</i>
+				<i class="large material-icons blue-text headico">grade</i>
                 <h4 class="text-center">Quiénes usan Python</h4>
                 <p class="text-center">Información sobre organizaciones que utilizan Python en Mexico.</p>
             </article>
 
             <article class="col s4">
-				<i class="large material-icons blue-text darken-4">recent_actors</i>
-                <h4 class="text-center"><a href="https://www.facebook.com/groups/pythonmx/">Grupo en Facebook</a></h4>
+				<a href="https://www.facebook.com/groups/pythonmx/"><i class="large material-icons blue-text headico">recent_actors</i>
+                <h4 class="text-center">Grupo en Facebook</h4></a>
                 <p class="text-center">El espacio de edición colaborativa</p>
             </article>
 
             <article class="col s4">
-				<i class="large material-icons blue-text darken-4">subtitles</i>
+				<i class="large material-icons blue-text headico">subtitles</i>
                 <h4 class="text-center">Proyectos de la comunidad</h4>
                 <p class="text-center">Los proyectos que desarrollamos como grupo o en los que participan nuestros miembros.</p>
             </article>
