add fixed button for email subscription

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
 
 <main id="main" role="main">
 
+<!-- floating button -->
+<div class="fixed-action-btn" style="button: 45px; right: 24px">
+	<a class="btn-floating btn-large blue">
+		<i class="large material-icons">email</i>
+	</a>
+</div>
   
 
     <div class="row">
