--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <main id="main" role="main">
 
 <!-- floating button -->
-<div class="fixed-action-btn" style="button: 45px; right: 24px">
+<div class="fixed-action-btn" style="bottom: 45px; right: 24px">
 	<a class="btn-floating btn-large blue">
 		<i class="large material-icons">email</i>
 	</a>
