--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <!-- floating button -->
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px">
-	<a class="btn-floating btn-large blue">
+	<a class="btn-floating btn-large blue" href="sub">
 		<i class="large material-icons">email</i>
 	</a>
 </div>
@@ -228,6 +228,26 @@
     </div>
 
      <!--/container-->
+
+	 <!-- Modal dialog -->
+	 <div id="sub" class="modal">
+		 <form class="">
+		 <div class="modal-content">
+			 <h4>Inscribete</h4>
+			 
+			 <!-- Subscription form -->
+			 <i class="material-icons prefix">email</i>
+			 <input id="icon_prefix" type="email" class="validate">
+			 <label for="icon_prefix">Inserta tu correo</label>
+
+		 </div>
+		 <div class="modal-footer">
+			 <a href="#!" class="modal-action modal-close waves waves-effect waves-green btn-flat">Agree</a>
+		 </div>
+		 </form>
+	 </div>
+	 <!-- Modal dialog CLOSE -->
+
 </main>
 
             
