--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@
                 }
             });
 
-        
+       // initialize modal javascript
+			$(document).ready(function() {
+				$('.modal').leanModal();
+			});
 
         </script>
     </body>
