added some new tags for the modal trigger

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <!-- floating button -->
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px">
-	<a class="btn-floating btn-large blue modal-trigger" href="#modal1">
+	<a class="btn-floating btn-large blue modal-trigger" href="#sub">
 		<i class="large material-icons">email</i>
 	</a>
 </div>
@@ -289,7 +289,7 @@
 
        // initialize modal javascript
 			$(document).ready(function() {
-				$('.modal1').leanModal();
+				$('#sub').leanModal();
 			});
 
         </script>
