--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<nav class="indigo accent-4">
 		  <div class="nav-wrapper ">
 			<a href="/" id="logo" class="brand-logo left">Python Mexico</a>
-			<ul id=nav-mobile" class="right hide-on-med-and-down">
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li>
 					<a href="/"><span class="inicio"></span>Inicio</a>
 				</li>
