change js for .modal-trigger

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
        // initialize modal javascript
 			$(document).ready(function() {
-				$('#sub').leanModal();
+				$('.modal-trigger').leanModal();
 			});
 
         </script>
