--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
 			 <i class="material-icons prefix">email</i>
 			 <input id="icon_prefix" type="email" class="validate">
 			 <label for="icon_prefix">Inserta tu correo</label>
-			 <a href="#!" class="modal-action modal-close waves waves-effect waves-green btn-flat">Agree</a>
+			 <a href="#!" class="modal-action modal-close waves waves-effect waves-green btn-flat">Enviar</a>
+			 <a href="#!" class="modal-action modal-close">Cerrar</a>
 		 </form>
 
 		 </div>
