--- a/index.html
+++ b/index.html
@@ -237,10 +237,14 @@
 			 <!-- Subscription form -->
 		 <form class="">
 			 <i class="material-icons prefix">email</i>
-			 <input id="icon_prefix" type="email" class="validate">
+			 <input id="icon_prefix" type="email" class="validate" />
 			 <label for="icon_prefix">Inserta tu correo</label>
-			 <a href="#!" class="modal-action modal-close waves waves-effect waves-green btn-flat">Enviar</a>
-			 <a href="#!" class="modal-action modal-close">Cerrar</a>
+			 <div class="row">
+			 <div class="col s6 offset-s8">
+			 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Enviar</a>
+			 <a href="#!" class="modal-action modal-close waves-effect pink accent-2 btn">Cerrar</a>
+			 </div>
+			 </div>
 		 </form>
 
 		 </div>
