fix the accept button

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 			 <label for="icon_prefix">Inserta tu correo</label>
 			 <div class="row">
 			 <div class="col s6 offset-s8">
-			 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Enviar</a>
+			 <a href="#!" class="modal-action modal-close waves-effect waves-green btn">Enviar</a>
 			 <a href="#!" class="modal-action modal-close waves-effect pink accent-2 btn">Cerrar</a>
 			 </div>
 			 </div>
