add new javascript for gitter

--- a/index.html
+++ b/index.html
@@ -294,8 +294,13 @@
 			$(document).ready(function() {
 				$('.modal-trigger').leanModal();
 			});
-
         </script>
+		<script>
+		  ((window.gitter = {}).chat = {}).options = {
+			room: 'PythonMexico'
+		  };
+		</script>
+		<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
     </body>
 </html>
 
