add new javascript for gitter

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         </script>
 		<script>
 		  ((window.gitter = {}).chat = {}).options = {
-			room: 'PythonMexico'
+			room: 'PythonMexico/pythonmexico.github.io'
 		  };
 		</script>
 		<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
