--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 		<script id="pyscript" type="text/python" src="/static/js/feeds.py"></script>
         <link rel="icon" href="/static/img/icons/pyar.ico" type="image/ico">
 
-        
+       <style type="text/css">
+			.gitter-chat-embed-action-bar { margin-top: 40px; background: none;}	
+		</style> 
 
 
     </head>
