--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <link rel="icon" href="/static/img/icons/pyar.ico" type="image/ico">
 
        <style type="text/css">
-			.gitter-chat-embed-action-bar { margin-top: 70px; background: none;}	
+			@media screen  and (device-width: 640px) {
+			.gitter-chat-embed-action-bar {display: none }
+			} 
+			.gitter-chat-embed-action-bar { margin-top: 40px; }	
 		</style> 
 
 
@@ -96,19 +99,19 @@
 
     <section>
         <div class="row index-content">
-            <article class="col s4">
+            <article class="col s12 m4">
 				<i class="large material-icons blue-text headico">input</i>
                 <div class="img aprendiendo_python"></div>
                 <h4 class="text-center">Aprendiendo Python</h4>
                 <p class="text-center">Recopilación de recursos que los miembros de PythonMX consideramos útil para quienes que se inician en este lenguaje.</p>
             </article>
-            <article class="col s4">
+            <article class="col s12 m4">
 				<a href="https://mail.python.org/mailman/listinfo/python-mx"><i class="large material-icons blue-text headico">email</i>
                 <h4 class="text-center">Lista de correo</h4></a>
                 <p class="text-center">Instrucciones para suscribirte a nuestra lista, nuestro principal canal de comunicación.</p>
             </article>
 
-            <article class="col s4">
+            <article class="col s12 m4">
 				<i class="large material-icons blue-text headico">chat_bubble</i>
                 <h4 class="text-center">Chat de PythonMX</h4>
                 <p class="text-center">Unete a nuestro chat en <a href="irc://freenode.net/pythonmx">Freenode</a></p>
@@ -116,19 +119,19 @@
 
             </div>
             <div class="row">
-            <article class="col s4">
+            <article class="col s12 m4">
 				<i class="large material-icons blue-text headico">grade</i>
                 <h4 class="text-center">Quiénes usan Python</h4>
                 <p class="text-center">Información sobre organizaciones que utilizan Python en Mexico.</p>
             </article>
 
-            <article class="col s4">
+            <article class="col s12 m4">
 				<a href="https://www.facebook.com/groups/pythonmx/"><i class="large material-icons blue-text headico">recent_actors</i>
                 <h4 class="text-center">Grupo en Facebook</h4></a>
                 <p class="text-center">El espacio de edición colaborativa</p>
             </article>
 
-            <article class="col s4">
+            <article class="col s12 m4">
 				<i class="large material-icons blue-text headico">subtitles</i>
                 <h4 class="text-center">Proyectos de la comunidad</h4>
                 <p class="text-center">Los proyectos que desarrollamos como grupo o en los que participan nuestros miembros.</p>
