moved some css to mobile.css

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 		<!-- Materialize CSS -->
         <link rel="stylesheet" href="/static/css/materialize.min.css" />
+        <link rel="stylesheet" href="/static/css/mobile.css" />
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="/static/js/materialize.min.js"></script>
 
@@ -36,9 +37,6 @@
         <link rel="icon" href="/static/img/icons/pyar.ico" type="image/ico">
 
        <style type="text/css">
-			@media screen  and (device-width: 640px) {
-			.gitter-chat-embed-action-bar {display: none }
-			} 
 			.gitter-chat-embed-action-bar { margin-top: 40px; }	
 		</style> 
 
