modify the tabs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         <link rel="icon" href="/static/img/icons/pyar.ico" type="image/ico">
 
        <style type="text/css">
-			.gitter-chat-embed-action-bar { margin-top: 40px; }	
+			.gitter-chat-embed-action-bar { 
+				margin-top: 80px; 
+				background: transparent; 
+				margin-right: 50px; 
+			}	
 		</style> 
 
 
