added some font style

--- a/trabajo/index.html
+++ b/trabajo/index.html
@@ -102,17 +102,19 @@
 		<h1 class="headertitle">Desarrolladores</h1>
         <div class="row index-content">
             <article class="col s12 m4">
+				<img src="img/alexandro.jpg" class="profile_image img-circle" />
+				<p class="name">Alexandro Colorado</p>
+				<p class="description">Desarrollador de python con 10 a&ntilde;os de experiencia.</p>
+			</article>
+            <article class="col s12 m4">
 				<img src="" class="profile_image img-circle" />
 				<p class="name">Alexandro Colorado</p>
 				<p class="description">Desarrollador de python con 10 a&ntilde;os de experiencia.</p>
-			</article>
-            <article class="col s12 m4">
-				<p class="name">Alexandro Colorado</p>
-				<p class="description">Desarrollador de python con 10 a&ntilde;os de experiencia.</p>
 
 			</article>
 
             <article class="col s12 m4">
+				<img src="" class="profile_image img-circle" />
 				<p class="name">Alexandro Colorado</p>
 				<p class="description">Desarrollador de python con 10 a&ntilde;os de experiencia.</p>
 
